--- a/client/scss/components/_code.scss
+++ b/client/scss/components/_code.scss
@@ -1,3 +1,7 @@
+.snippet-text {
+  background-color: $bgColor;
+}
+
 .snippet-diff {
   color: $codeTextColor;
   background-color: $codeBgColor;
